<resources>
    <string name="app_name">Project JPR</string>

    <string name="home_tab_1">Movies</string>
    <string name="home_tab_2">Tv Show</string>
</resources>